<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToOutline="true"
    android:background="#6868AA"
    tools:context=".Welcome">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="37dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:srcCompat="@drawable/app_icon" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/medium"
                android:gravity="center_horizontal"
                android:text="@string/make_your_mories"
                android:textColor="@color/white"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/regular"
                android:foregroundGravity="center"
                android:gravity="center_horizontal"
                android:padding="10dp"
                android:text="@string/record_recall_and_share_your_favorite_mymories_anytime"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="17dp"
                android:textStyle="bold" />



            <Button
                android:id="@+id/google"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/button_google"
                android:fontFamily="@font/regular"
                android:padding="16dp"
                android:text="@string/continue_with_google"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

            <Button
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@color/white"
                android:fontFamily="@font/regular"
                android:padding="16dp"
                android:text="@string/sign_up_with_email"
                android:textColor="@color/black"
                android:textSize="22sp"
                android:textStyle="bold"
                app:cornerRadius="12dp" />

            <TextView
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:text="@string/already_have_an_account_log_in"
                android:textColor="@color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/withoutAccunt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Use Without Account"
                android:layout_marginTop="16dp"
                android:gravity="center_horizontal|center_vertical"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="17sp"
                />

        </LinearLayout>
    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>