<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layoutDialogeDeletNote"
    android:layout_margin="@dimen/_5sdp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/backgrond_search">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/_3sdp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:src="@drawable/icon_delete"
                app:tint="@color/Icones" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/delete_note"
                android:textColor="@color/Icones"
                android:fontFamily="@font/bold"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_gravity="center"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/alrtWebUrl"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_6sdp"
                android:layout_marginBottom="@dimen/_15sdp"
                android:fontFamily="@font/regular"
                android:textColor="@color/Icones"
                android:text="@string/are_you_sure_want_to_delete_note"
                android:textSize="@dimen/_14ssp"
                android:importantForAutofill="no" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="end"
            android:layout_margin="@dimen/_3sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_6sdp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/cancelButton"
                android:text="@string/cancal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/Icones"
                android:fontFamily="@font/regular"
                android:padding="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center"/>
            <TextView
                android:id="@+id/deleteButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_note"
                android:textSize="@dimen/_13sdp"
                android:textColor="@color/Icones"
                android:fontFamily="@font/regular"
                android:padding="@dimen/_3sdp"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_gravity="center"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>