<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutOfColor"
    android:orientation="vertical"
    android:background="@drawable/background_add_button"
    android:backgroundTint="?attr/colorSurfaceContainerHigh"
    app:behavior_peekHeight = "0dp"
    app:layout_behavior="@string/bottom_sheet_behavior"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@null"
        android:fontFamily="@font/medium"
        android:padding="@dimen/_10sdp"
        android:paddingStart="@dimen/_12sdp"
        android:text="Do Someting..."
        android:textColor="@color/text"
        android:textSize="@dimen/_12ssp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="@dimen/_32ssp"
        android:layout_marginEnd="@dimen/_32ssp"
        android:background="@color/text"
        app:layout_constraintTop_toBottomOf="@+id/text"/>

    <ScrollView
        android:scrollbarSize="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/layoutDeletNote"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:srcCompat="@drawable/icon_delete"
                    app:tint="@color/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_10sdp"
                    android:fontFamily="@font/regular"
                    android:text="@string/delete_note"
                    android:textColor="@color/text"
                    android:textSize="@dimen/_12ssp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOfMakeCopy"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="28dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:srcCompat="@drawable/icon_image"
                    app:tint="@color/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/text"
                    android:text="@string/make_copy"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOfShare"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:srcCompat="@drawable/icon_url"
                    app:tint="@color/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/text"
                    android:text="@string/share"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutOfCollabrative"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="28dp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:srcCompat="@drawable/collabrative"
                    app:tint="@color/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/text"
                    android:text="@string/collabrative_note"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/layoutAddToArchiv"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:gravity="center"
                android:layout_marginBottom="@dimen/_5sdp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="@dimen/_22sdp"
                    android:layout_height="@dimen/_22sdp"
                    android:layout_marginStart="@dimen/_10sdp"
                    app:srcCompat="@drawable/icon_archive"
                    app:tint="@color/text" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/_12ssp"
                    android:fontFamily="@font/regular"
                    android:textColor="@color/text"
                    android:text="@string/archive"
                    android:layout_marginStart="@dimen/_10sdp"/>

            </LinearLayout>


        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>