<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_5sdp"
            android:layout_marginBottom="@dimen/_5sdp"
            android:background="@null"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/serchLayoutMain"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/backgrond_search">

                <EditText
                    android:id="@+id/inputSearch"
                    android:layout_width="0dp"
                    android:layout_height="@dimen/_35sdp"
                    android:layout_marginStart="@dimen/_15sdp"
                    android:layout_marginEnd="8dp"
                    android:background="@null"
                    android:fontFamily="@font/regular"
                    android:hint="@string/search_archive_notes"
                    android:inputType="text"
                    android:minWidth="@android:dimen/thumbnail_width"
                    android:textColor="@color/colorWhite"
                    android:textColorHint="@color/texthint"
                    android:textSize="@dimen/_13ssp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/layoutChanger"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageView
                    android:id="@+id/layoutChanger"
                    android:layout_width="@dimen/_20sdp"
                    android:layout_height="@dimen/_20ssp"
                    android:layout_gravity="center"
                    android:layout_marginEnd="16dp"
                    android:contentDescription="@string/app_name"
                    android:foregroundGravity="right"
                    android:padding="@dimen/_3sdp"
                    android:src="@drawable/icon_grid"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:tint="@color/colorSearchIcon" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>

    <LinearLayout
        android:id="@+id/emptyNoteLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/icon_empty_note" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bold"
            android:gravity="center"
            android:text="@string/no_notes_available"
            android:textSize="@dimen/_15sdp" />


    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layoutSearch">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/ArchiveNotesRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="true"
            android:paddingTop="@dimen/_5sdp"
            android:paddingEnd="@dimen/_5sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/layoutSearch" />


    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>



